<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ig_lio_c</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="iratecat1@outlook.com">nine-fish</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ig_lio_c_msgs</buildtool_depend>
  <buildtool_depend>nav2_util</buildtool_depend>
  <buildtool_depend>livox_ros_driver2</buildtool_depend>
  <buildtool_depend>grid_map_msgs</buildtool_depend>
  <buildtool_depend>grid_map_core</buildtool_depend>
  <buildtool_depend>nav_msgs</buildtool_depend>
  <buildtool_depend>grid_map_filters</buildtool_depend>
  <buildtool_depend>ig_lio_c_msgs</buildtool_depend>
  <buildtool_depend>nav2_map_server</buildtool_depend>
  <buildtool_depend>grid_map_pcl</buildtool_depend>
  <buildtool_depend>grid_map_ros</buildtool_depend>
  <buildtool_depend>octomap-Dynamic_point_cloud_removal</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
